--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Photo Time</title>
 </head>
 <body>
-  
+  <div id="root">
+    <header class="header">
+      <nav class="main-nav">
+        <ul class="main-nav__ul">
+          <li class="main-nav__item">home</li>
+          <li class="main-nav__item">photoapp</li>
+          <li class="main-nav__item"><img/></li>
+          <li class="main-nav__item">design</li>
+          <li class="main-nav__item">download</li>
+        </ul>
+      </nav>
+      <div class="title">
+        <h1 class="title__main">your life , a photo</h1>
+        <p class="title__content">print your life in a simple photo</p>
+        <button class="title__start-btn">get started</button>
+      </div>
+      <nav class="icon-nav">
+        <ul class="icon-nav__ul">
+          <li class="icon-nav__item">A</li>
+          <li class="icon-nav__item">B</li>
+          <li class="icon-nav__item">C</li>
+        </ul>
+      </nav>
+    </header>
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
+  </div>
 </body>
 </html>
