--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="main-nav__ul">
           <li class="main-nav__item">home</li>
           <li class="main-nav__item">photoapp</li>
-          <li class="main-nav__item"><img/></li>
+          <li class="main-nav__item main-nav__item--logo">X</li>
           <li class="main-nav__item">design</li>
           <li class="main-nav__item">download</li>
         </ul>
@@ -21,18 +21,62 @@
       <div class="title">
         <h1 class="title__main">your life , a photo</h1>
         <p class="title__content">print your life in a simple photo</p>
-        <button class="title__start-btn">get started</button>
+        <button class="title__btn">get started</button>
       </div>
       <nav class="icon-nav">
         <ul class="icon-nav__ul">
-          <li class="icon-nav__item">A</li>
-          <li class="icon-nav__item">B</li>
-          <li class="icon-nav__item">C</li>
+          <li class="icon-nav__item">X</li>
+          <li class="icon-nav__item">X</li>
+          <li class="icon-nav__item">X</li>
         </ul>
       </nav>
     </header>
     <section>
-
+      <article class="intro-part">
+        <div class="intro-part__box">
+          <h2 class="intro-part__title">rappresent your life with a simple photo</h2>
+          <p class="intro-part__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis culpa, iusto qui vero officia asperiores et quia, architecto adipisci voluptatibus corrupti! Cum temporibus repudiandae, placeat quia culpa aspernatur velit laboriosam!</p>
+          <button class="intro-part__btn">get started</button>
+        </div>
+      </article>
+      <article class="design-part">
+        <div class="design-part__box">
+          <h2 class="design-part__title">design</h2>
+          <p class="design-part__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, perspiciatis aspernatur. Pariatur amet magni ratione nemo aut soluta culpa, dicta sed iure reiciendis? Doloremque distinctio autem debitis aperiam harum dolor.</p>
+          <button class="design-part__btn">learn more</button>
+          <p class="design-part__present">01/05</p>
+          <button class="design-part__btn design-part__btn--back"><</button>
+          <button class="design-part__btn design-part__btn--next">></button>
+        </div>
+      </article>
+      <article class="community-part">
+        <div class="community-part__box">
+          <img class="community-part__logo"/>
+          <h2 class="community-part__title">our community</h2>
+          <p class="community-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus non amet iste numquam vel repudiandae ab enim accusamus, neque veritatis animi in sequi reiciendis quisquam fugit, corporis eveniet molestias.</p>
+        </div>
+        <div class="community-part__photo-box">
+          <button class="community-part__btn community-part__btn--back">X</button>
+          <button class="community-part__btn community-part__btn--next">X</button>
+          <img class="community-part__image"/>
+          <img class="community-part__image"/>
+        </div>
+      </article>
+      <article class="subscribe-part">
+        <div class="subscribe-part__box">
+          <h2 class="subscribe-part__title"></h2>
+          <input class="subscribe-part__email" type="text">
+          <button class="subscribe-part__btn">X</button>
+        </div>
+      </article>
+      <article class="download-part">
+        <div class="download-part__box">
+          <h2 class="download-part__title">download it</h2>
+          <p class="download-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, consectetur consequatur at alias ut doloremque vel aspernatur eveniet vitae beatae unde ducimus inventore, blanditiis, incidunt quam temporibus ullam? Earum, reprehenderit?</p>
+          <button class="download-part__btn">apple store<img class="download-part__icon download-part__icon--apple"/></button>
+          <button class="download-part__btn">play store<img class="download-part__icon download-part__icon--android"/></button>
+        </div>
+      </article>
     </section>
     <footer>
 
