html 구조 정의 완료

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="root">
     <header class="header">
       <nav class="main-nav">
-        <ul class="main-nav__ul">
+        <ul class="main-nav__list">
           <li class="main-nav__item">home</li>
           <li class="main-nav__item">photoapp</li>
           <li class="main-nav__item main-nav__item--logo">X</li>
@@ -24,14 +24,14 @@
         <button class="title__btn">get started</button>
       </div>
       <nav class="icon-nav">
-        <ul class="icon-nav__ul">
+        <ul class="icon-nav__list">
           <li class="icon-nav__item">X</li>
           <li class="icon-nav__item">X</li>
           <li class="icon-nav__item">X</li>
         </ul>
       </nav>
     </header>
-    <section>
+    <section class="section">
       <article class="intro-part">
         <div class="intro-part__box">
           <h2 class="intro-part__title">rappresent your life with a simple photo</h2>
@@ -78,8 +78,16 @@
         </div>
       </article>
     </section>
-    <footer>
-
+    <footer class="footer">
+      <div class="info">
+        <ul class="info__list">
+          <li class="info__item">credits</li>
+          <li class="info__item">privacy</li>
+          <li class="info__item">our teams</li>
+        </ul>
+        <p class="info__copyright">Copyright by phototime · all right reserved</p>
+      </div>
+      <img class="footer__logo"/>
     </footer>
   </div>
 </body>
