--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Photo Time</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         <ul class="main-nav__list">
           <li class="main-nav__item">home</li>
           <li class="main-nav__item">photoapp</li>
-          <li class="main-nav__item main-nav__item--logo">X</li>
+          <li class="main-nav__item main-nav__item--logo"></li>
           <li class="main-nav__item">design</li>
           <li class="main-nav__item">download</li>
         </ul>
