intro 부분 레이아웃

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
     <section class="section">
       <article class="intro-part">
         <div class="intro-part__box">
-          <h2 class="intro-part__title">rappresent your life with a simple photo</h2>
+          <h2 class="intro-part__title">represent your life with a simple photo</h2>
           <p class="intro-part__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis culpa, iusto qui vero officia asperiores et quia, architecto adipisci voluptatibus corrupti! Cum temporibus repudiandae, placeat quia culpa aspernatur velit laboriosam!</p>
           <button class="intro-part__btn">get started</button>
         </div>
+        <img class="intro-part__img"/>
       </article>
       <article class="design-part">
         <div class="design-part__box">
