community 부분 레이아웃

--- a/index.html
+++ b/index.html
@@ -42,24 +42,27 @@
         <img class="intro-part__img"/>
       </article>
       <article class="design-part">
+        <img class="design-part__img"/>
         <div class="design-part__box">
           <h2 class="design-part__title">design</h2>
           <p class="design-part__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, perspiciatis aspernatur. Pariatur amet magni ratione nemo aut soluta culpa, dicta sed iure reiciendis? Doloremque distinctio autem debitis aperiam harum dolor.</p>
           <button class="design-part__btn">learn more</button>
           <p class="design-part__present">01/05</p>
-          <button class="design-part__btn design-part__btn--back"><</button>
-          <button class="design-part__btn design-part__btn--next">></button>
+          <button class="design-part__control design-part__control--back"><</button>
+          <button class="design-part__control design-part__control--next">></button>
         </div>
       </article>
       <article class="community-part">
         <div class="community-part__box">
           <img class="community-part__logo"/>
           <h2 class="community-part__title">our community</h2>
-          <p class="community-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus non amet iste numquam vel repudiandae ab enim accusamus, neque veritatis animi in sequi reiciendis quisquam fugit, corporis eveniet molestias.</p>
+          <p class="community-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="community-part__photo-box">
-          <button class="community-part__btn community-part__btn--back">X</button>
-          <button class="community-part__btn community-part__btn--next">X</button>
+          <div class="community-part__control-box">
+              <button class="community-part__control community-part__control--back"><</button>
+              <button class="community-part__control community-part__control--next">></button>
+          </div>
           <img class="community-part__image"/>
           <img class="community-part__image"/>
         </div>
