section 레이아웃 완료

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       </article>
       <article class="subscribe-part">
         <div class="subscribe-part__box">
-          <h2 class="subscribe-part__title"></h2>
-          <input class="subscribe-part__email" type="text">
+          <h2 class="subscribe-part__title">subscribe to our community</h2>
+          <input class="subscribe-part__email" placeholder="YOUR EMAIL" type="text">
           <button class="subscribe-part__btn">X</button>
         </div>
       </article>
