아이콘 추가, 폰트 반응형 설정

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       </div>
       <nav class="icon-nav">
         <ul class="icon-nav__list">
-          <li class="icon-nav__item">X</li>
-          <li class="icon-nav__item">X</li>
-          <li class="icon-nav__item">X</li>
+          <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/twitter.svg"/></li>
+          <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/flickr.svg"/></li>
+          <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/dribble.svg"/></li>
         </ul>
       </nav>
     </header>
@@ -70,16 +70,18 @@
       <article class="subscribe-part">
         <div class="subscribe-part__box">
           <h2 class="subscribe-part__title">subscribe to our community</h2>
-          <input class="subscribe-part__email" placeholder="YOUR EMAIL" type="text">
-          <button class="subscribe-part__btn">X</button>
+          <div class="subscribe-part__form">
+            <input class="subscribe-part__email" placeholder="YOUR EMAIL" type="text"/>
+            <img class="subscribe-part__btn" src="./resource/check.svg"/>
+          </div>
         </div>
       </article>
       <article class="download-part">
         <div class="download-part__box">
           <h2 class="download-part__title">download it</h2>
           <p class="download-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, consectetur consequatur at alias ut doloremque vel aspernatur eveniet vitae beatae unde ducimus inventore, blanditiis, incidunt quam temporibus ullam? Earum, reprehenderit?</p>
-          <button class="download-part__btn">apple store<img class="download-part__icon download-part__icon--apple"/></button>
-          <button class="download-part__btn">play store<img class="download-part__icon download-part__icon--android"/></button>
+          <button class="download-part__btn">apple store<img class="download-part__icon" src="./resource/apple.svg"/></button>
+          <button class="download-part__btn">play store<img class="download-part__icon" src="./resource/android.svg"/></button>
         </div>
       </article>
     </section>
