리소스 추가, 비율조절

--- a/index.html
+++ b/index.html
@@ -1,101 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <title>Photo Time</title>
-</head>
-<body>
-  <div id="root">
-    <header class="header">
-      <nav class="main-nav">
-        <ul class="main-nav__list">
-          <li class="main-nav__item">home</li>
-          <li class="main-nav__item">photoapp</li>
-          <li class="main-nav__item main-nav__item--logo"></li>
-          <li class="main-nav__item">design</li>
-          <li class="main-nav__item">download</li>
-        </ul>
-      </nav>
-      <div class="title">
-        <h1 class="title__main">your life , a photo</h1>
-        <p class="title__content">print your life in a simple photo</p>
-        <button class="title__btn">get started</button>
-      </div>
-      <nav class="icon-nav">
-        <ul class="icon-nav__list">
-          <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/twitter.svg"/></li>
-          <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/flickr.svg"/></li>
-          <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/dribble.svg"/></li>
-        </ul>
-      </nav>
-    </header>
-    <section class="section">
-      <article class="intro-part">
-        <div class="intro-part__box">
-          <h2 class="intro-part__title">represent your life with a simple photo</h2>
-          <p class="intro-part__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis culpa, iusto qui vero officia asperiores et quia, architecto adipisci voluptatibus corrupti! Cum temporibus repudiandae, placeat quia culpa aspernatur velit laboriosam!</p>
-          <button class="intro-part__btn">get started</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Photo Time</title>
+  </head>
+  <body>
+    <div id="root">
+      <header class="header">
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">home</li>
+            <li class="main-nav__item">photoapp</li>
+            <li class="main-nav__item main-nav__item--logo"></li>
+            <li class="main-nav__item">design</li>
+            <li class="main-nav__item">download</li>
+          </ul>
+        </nav>
+        <div class="title">
+          <h1 class="title__main">your life , a photo</h1>
+          <p class="title__content">print your life in a simple photo</p>
+          <button class="title__btn">get started</button>
         </div>
-        <img class="intro-part__img"/>
-      </article>
-      <article class="design-part">
-        <img class="design-part__img"/>
-        <div class="design-part__box">
-          <h2 class="design-part__title">design</h2>
-          <p class="design-part__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, perspiciatis aspernatur. Pariatur amet magni ratione nemo aut soluta culpa, dicta sed iure reiciendis? Doloremque distinctio autem debitis aperiam harum dolor.</p>
-          <button class="design-part__btn">learn more</button>
-          <p class="design-part__present">01/05</p>
-          <button class="design-part__control design-part__control--back"><</button>
-          <button class="design-part__control design-part__control--next">></button>
-        </div>
-      </article>
-      <article class="community-part">
-        <div class="community-part__box">
-          <img class="community-part__logo"/>
-          <h2 class="community-part__title">our community</h2>
-          <p class="community-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-        <div class="community-part__photo-box">
-          <div class="community-part__control-box">
+        <nav class="icon-nav">
+          <ul class="icon-nav__list">
+            <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/twitter.svg" /></li>
+            <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/flickr.svg" /></li>
+            <li class="icon-nav__item"><img class="icon-nav__icon" src="./resource/dribble.svg" /></li>
+          </ul>
+        </nav>
+      </header>
+      <section class="section">
+        <article class="intro-part">
+          <div class="intro-part__box">
+            <h2 class="intro-part__title">represent your life with a simple photo</h2>
+            <p class="intro-part__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis culpa, iusto qui vero officia asperiores et quia, architecto adipisci voluptatibus corrupti! Cum temporibus repudiandae, placeat quia culpa aspernatur velit laboriosam!</p>
+            <button class="intro-part__btn">get started</button>
+          </div>
+          <img class="intro-part__img" />
+        </article>
+        <article class="design-part">
+          <img class="design-part__img" />
+          <div class="design-part__box">
+            <h2 class="design-part__title">design</h2>
+            <p class="design-part__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, perspiciatis aspernatur. Pariatur amet magni ratione nemo aut soluta culpa, dicta sed iure reiciendis? Doloremque distinctio autem debitis aperiam harum dolor.</p>
+            <button class="design-part__btn">learn more</button>
+            <p class="design-part__present">01/05</p>
+            <button class="design-part__control design-part__control--back"><</button>
+            <button class="design-part__control design-part__control--next">></button>
+          </div>
+        </article>
+        <article class="community-part">
+          <div class="community-part__box">
+            <img class="community-part__logo" />
+            <h2 class="community-part__title">our community</h2>
+            <p class="community-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="community-part__photo-box">
+            <div class="community-part__control-box">
               <button class="community-part__control community-part__control--back"><</button>
               <button class="community-part__control community-part__control--next">></button>
+            </div>
+            <img class="community-part__image" src="./resource/community1.PNG" />
+            <img class="community-part__image" src="./resource/community2.PNG" />
           </div>
-          <img class="community-part__image"/>
-          <img class="community-part__image"/>
-        </div>
-      </article>
-      <article class="subscribe-part">
-        <div class="subscribe-part__box">
-          <h2 class="subscribe-part__title">subscribe to our community</h2>
-          <div class="subscribe-part__form">
-            <input class="subscribe-part__email" placeholder="YOUR EMAIL" type="text"/>
-            <img class="subscribe-part__btn" src="./resource/check.svg"/>
+        </article>
+        <article class="subscribe-part">
+          <div class="subscribe-part__box">
+            <h2 class="subscribe-part__title">subscribe to our community</h2>
+            <div class="subscribe-part__form">
+              <input class="subscribe-part__email" placeholder="YOUR EMAIL" type="text" />
+              <img class="subscribe-part__btn" src="./resource/check.svg" />
+            </div>
           </div>
+        </article>
+        <article class="download-part">
+          <div class="download-part__box">
+            <h2 class="download-part__title">download it</h2>
+            <p class="download-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, consectetur consequatur at alias ut doloremque vel aspernatur eveniet vitae beatae unde ducimus inventore, blanditiis, incidunt quam temporibus ullam? Earum, reprehenderit?</p>
+            <button class="download-part__btn">apple store<img class="download-part__icon" src="./resource/apple.svg" /></button>
+            <button class="download-part__btn">play store<img class="download-part__icon" src="./resource/android.svg" /></button>
+          </div>
+        </article>
+      </section>
+      <footer class="footer">
+        <div class="info">
+          <ul class="info__list">
+            <li class="info__item">credits</li>
+            <li class="info__item">privacy</li>
+            <li class="info__item">our teams</li>
+          </ul>
+          <p class="info__copyright">Copyright by phototime · all right reserved</p>
         </div>
-      </article>
-      <article class="download-part">
-        <div class="download-part__box">
-          <h2 class="download-part__title">download it</h2>
-          <p class="download-part__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, consectetur consequatur at alias ut doloremque vel aspernatur eveniet vitae beatae unde ducimus inventore, blanditiis, incidunt quam temporibus ullam? Earum, reprehenderit?</p>
-          <button class="download-part__btn">apple store<img class="download-part__icon" src="./resource/apple.svg"/></button>
-          <button class="download-part__btn">play store<img class="download-part__icon" src="./resource/android.svg"/></button>
-        </div>
-      </article>
-    </section>
-    <footer class="footer">
-      <div class="info">
-        <ul class="info__list">
-          <li class="info__item">credits</li>
-          <li class="info__item">privacy</li>
-          <li class="info__item">our teams</li>
-        </ul>
-        <p class="info__copyright">Copyright by phototime · all right reserved</p>
-      </div>
-      <img class="footer__logo"/>
-    </footer>
-  </div>
-</body>
+        <img class="footer__logo" />
+      </footer>
+    </div>
+  </body>
 </html>
